# learning-to-relax

./: .gitignore  README.md  pyproject.toml
configs/bench/: learning_chain_default.json  learning_chain_theoretical.json  learning_ring_default.json
old/scripts/: learning.m
scripts/: _common.py  asymptotic.py  cg.py  comparators.py  contextual.py  degenerate.py  h2d.py  inspect_precomputed_losses.py  learning.py  plot_omegas_with_learners.py  run_learning_configs.py  run_learning_precomputed.py
src/ltr/: __init__.py  domains.py
src/ltr/bench/: __init__.py  config.py  precomputed.py  similarity.py
src/ltr/learners/: chebcb.py  exp3_spectral.py  tsallis_inf.py  tsallis_inf_cb.py
src/ltr/pde/: heat2d.py
src/ltr/solvers/: bounds.py  sor.py  ssor_pcg.py
src/ltr/utils/: bump.py  golden_section.py  random.py
tests/: test_bench.py  test_domains.py  test_learners.py  test_solvers.py
